v1.4.5
- Added Dress Girl Controller - You can control the dress girl and chase people!
- Added Clay Surgeon Controller - You can control the Clay Surgeon and cut people up!
- Added Anti Ghost Girl - Ghost girl can't haunt you
- Added Welcome Message - Welcome message when you join a lobby
- Added Anti Scan - Prevents you from scanning when controlling a enemy
- Changed Unload - It attempts to remove all enabled hacks and make everything normal
- Fixed Enemy Controller - Enemy control gets disabled when the enemy dies or gets destroyed

v1.4.4 
- Added PJ Plushie Spammer - Spams PJ Plushies at a variable speed
- Added Click Teleport - Teleport to where you click
- Added Peer 2 Peer Communication - Adds [LethalMenu {version}] before their names in players tab (1.4.4+) 
- Added New Enemies To Cham Toggles 
- Added Grab Objects Before Game - You can pick up items
- Added Toggle All For Displays - Added a toggle to enable and disable all display options
- Added Toggle Terminal Sound - Spam the terminal sound
- Added FPS Counter - Displays your FPS
- Added Toggle Menu Tip - Adds a Toggle Menu: (Menu Key) to control tips
- Added Vehicle Godmode - Cruiser doesn't take damage
- Added Color Customization to info display
- Added Hack Highlight - Hacks are highlighted
- Added Hack Highlight Customization - Set the color of the highlighted hacks 
- Added Transmitt - You can send messages as the signal transmitter
- Added Message Prefixes - [System], [Server], [Broadcast] - You can send messages in chat as these prefixes like [Prefix] {message}
- Added Message as other players 
- Added Suit Manager - View all suits with buy all and wear on buy
- Added Unlock All Suits - Unlocks all suits
- Added Wear On Buy to suit manager - Buys the suit and wears 
- Added Eggs Never Explode - Easter Eggs never explode when you throw them
- Added Force Bleed - Force others players to bleed 
- Added Unlimited Zap Gun - You can shock forever